[project]
name = "ml_research_tools"
version = "1.1.0"
description = "A collection of tools for machine learning research, including experiment management, Kubernetes utilities, and LaTeX processing."
authors = [{ name = "alexdremov", email = "dremov.me@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.15.2,<0.16",
    "typer-cli>=0.15.2,<0.16",
    "typing-extensions>=4.12.2,<5",
    "rich>=13.9.4,<14",
    "wandb>=0.19.8,<0.20",
    "tqdm>=4.67.1,<5",
    "tiktoken>=0.9.0,<0.10",
    "tenacity>=9.0.0,<10",
    "redis>=5.2.1,<6",
    "pyyaml>=6.0.2,<7",
    "openai>=2.0.0,<3",
    "numpy>=2.2.4,<3",
    "pandas>=2.2.3,<3",
    "pypdf2>=3.0.1",
    "rich-argparse>=1.7.0,<2",
    "configparser>=7.2.0,<8",
    "matplotlib>=3.10.1,<4",
    "openreview-py>=1.52.9,<2",
    "joblib>=1.5.2",
    "fitz>=0.0.1.dev2",
    "pymupdf>=1.26.5",
    "bibtexparser>=1.4.3",
    "plumbum>=1.10.0",
    "requests>=2.32.5",
]

[project.urls]
Documentation = "https://alexdremov.github.io/ml_research_tools/"
Repository = "https://github.com/alexdremov/ml_research_tools"
"Bug Tracker" = "https://github.com/alexdremov/ml_research_tools/issues"

[project.scripts]
ml_research_tools = "ml_research_tools.__main__:main"
mlrt = "ml_research_tools.__main__:main"

[project.entry-points."matplotlib.backend"]
svglatex = "ml_research_tools.tex.backend"

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "mypy>=1.9.0,<2",
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.1.0,<5",
    "ruff>=0.2.2,<0.3",
    "jupyterlab>=4.3.6,<5",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "sphinx-markdown-builder",
    "sphinx-book-theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-programoutput",
]
test = ["pytest>=8.3.5,<9"]

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
